# chip8-emu

./: .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: deploy.yml
demo/: .gitignore  .prettierrc  README.md  eslint.config.js  package.json  svelte.config.js  vite.config.ts
demo/src/routes/: +layout.svelte  +page.svelte
src/: core.rs  lib.rs  main.rs  rom.rs
