[package]
name = "chip8-emu"
description = "A simple Chip-8 emulator built with Rust"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/levenrok/chip8-emu.git"
authors = ["levenrok"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
